--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
 
 h3 {
   font-size: 24px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -100,6 +104,7 @@ transform: scale(1.1);
   flex-direction: column;
   align-items: center;
 }
+
 .filter {
   display: flex;
   flex-direction: column;
